samples/_failures_safe/1761310567_ec9a7c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0c0fe409.c: In function ‘main’:
./samples/SAFE/__tmp_0c0fe409.c:144:9: error: expected declaration or statement at end of input
  144 |         return EXIT_FAILURE;
      |         ^~~~~~
./samples/SAFE/__tmp_0c0fe409.c:144:9: error: expected declaration or statement at end of input
